--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,7 +1,7 @@
 
 .header {
     text-align: center;
-    background-color: gray;
+    background-color: #C1DFF0;
 }
 .title-h1 {
     align-items: center;
